--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "email": "elimelech.oshinsky@gmail.com"
   },
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eli0shin/firebase-framework.git"
+  },
   "dependencies": {
     "@google-cloud/pubsub": "^0.31.0",
     "axios": "^0.19.0",
