--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firebase-framework",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "A framework designed to increase productivity in serverless applications using firebase",
   "main": "src/index.js",
   "scripts": {
@@ -23,6 +23,7 @@
     "@google-cloud/pubsub": "^0.31.0",
     "axios": "^0.19.0",
     "firebase-admin": "^8.4.0",
-    "firebase-functions": "^3.2.0"
+    "firebase-functions": "^3.2.0",
+    "helmet": "^3.20.1"
   }
 }
