--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firebase-framework",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "A framework designed to increase productivity in serverless applications using firebase",
   "main": "src/index.js",
   "scripts": {
@@ -22,6 +22,7 @@
   "dependencies": {
     "@google-cloud/pubsub": "^0.31.0",
     "axios": "^0.19.0",
+    "express": "^4.17.1",
     "firebase-admin": "^8.4.0",
     "firebase-functions": "^3.2.0",
     "helmet": "^3.20.1"
