--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A framework designed to increase productivity in serverless applications using firebase",
   "main": "src/index.js",
   "scripts": {
-    "test": "jest ."
+    "test": "jest"
   },
   "keywords": [
     "firebase",
@@ -27,5 +27,8 @@
     "firebase-admin": "^8.4.0",
     "firebase-functions": "^3.2.0",
     "helmet": "^3.22.0"
+  },
+  "devDependencies": {
+    "jest": "^27.4.7"
   }
 }
